Classe mira e hitbox do campo de jogo acabado

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -19,7 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="input_code.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -84,6 +83,7 @@
       <AdditionalUsingDirectories>
       </AdditionalUsingDirectories>
       <AdditionalIncludeDirectories>C:\Users\Diogo Ramos\Documents\freeglut\freeglut\glew-1.11.0\include;C:\Users\Diogo Ramos\Documents\freeglut\freeglut\freeglut\include;%(AdditionalUsingDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
